welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^Program:2: error: not found: value move
move(nbPas: Int,versLAvant: Boolean){
^Program:2: error: not found: value nbPas
move(nbPas: Int,versLAvant: Boolean){
     ^Program:2: error: not found: value versLAvant
move(nbPas: Int,versLAvant: Boolean){
                ^Program:3: error: not found: value versLAvant
  if(versLAvant){
     ^Program:4: error: not found: value nbPas
  for(i<- 1 to nbPas){
               ^Program:8: error: not found: value nbPas
    for(i<- 1 to nbPas){
                 ^